freegeek-default-settings (12.04.28) UNRELEASED; urgency=low

  * Disable compositing by default (Closes: #33706)

 -- Ryan Niebur <ryan@debian.org>  Sun, 12 May 2013 08:34:06 -0700

freegeek-default-settings (12.04.27) freegeek-test; urgency=low

  * Apply Ben's patch to fix our XFCE settings to disable AutoSave
    sessions (Closes: #34993)

 -- Ryan Niebur <ryan@debian.org>  Fri, 10 May 2013 15:08:14 -0700

freegeek-default-settings (12.04.26) freegeek-test; urgency=low

  [ Vagrant Cascadian ]
  * freegeek-default-settings: Recommend b43-fwcutter and 
    firmware-b43-installer to support additional Broadcom chipsets.
    RT#33939.

  [ Ryan Niebur ]
  * Set the default DVD player for the Free Geek session to vlc (Closes:
    #34215)

 -- Ryan Niebur <ryan@debian.org>  Sat, 16 Mar 2013 13:19:55 -0700

freegeek-default-settings (12.04.25) freegeek-test; urgency=low

  * freegeek-preferred-packages: Add Breaks on abiword-common. 

 -- Vagrant Cascadian <vagrant@debian.org>  Thu, 21 Feb 2013 12:29:33 -0800

freegeek-default-settings (12.04.24) freegeek-test; urgency=low

  * Recommend freegeek-manual-12.04. RT#32297.
  * Update Homepage, Vcs-Git and Vcs-Browser URLs in debian/control. 

 -- Vagrant Cascadian <vagrant@debian.org>  Thu, 21 Feb 2013 12:08:01 -0800

freegeek-default-settings (12.04.23) freegeek-test; urgency=low

  * Drop gnumeric from Breaks in freegeek-preferred-packages, as it is needed
    to use deadtrees documents.

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 19 Feb 2013 16:02:25 -0800

freegeek-default-settings (12.04.22) freegek-test; urgency=low

  * Add freegeek-preferred-packages package to remove installation of 
    abiword, gnumeric, whoopsie and apport. RT#33830, RT#33458.

 -- Vagrant Cascadian <vagrant@debian.org>  Tue, 19 Feb 2013 14:34:00 -0800

freegeek-default-settings (12.04.21) freegeek-test; urgency=low

  * Recommend more packages to avoid incomplete language warnings. RT#32677.